Bug 1271900: Don't require a minimum page size when setting up DEVMODE from print settings. r=jimm a=lizzard

MozReview-Commit-ID: ByO4KHPtkkM

--HG--
extra : source : 338091f5c27b5d454681bb57aaf0dc700c1da457